--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "babel-plugin-transform-remove-strict-mode",
-    "version": "0.0.2",
-    "author": "genify <genify@gmail.com>",
+    "name": "babel-plugin-transform-remove-strict-mode-tags",
+    "version": "0.0.1",
+    "author": "mayako <freedom21126@gmail.com>",
     "repository": {
         "type": "git",
-        "url": "https://github.com/genify/babel-plugin-transform-remove-strict-mode.git"
+        "url": "https://github.com/mayako21126/babel-plugin-transform-remove-strict-mode.git"
     },
     "license": "MIT",
     "main": "lib/index.js",
